--- a/index.html
+++ b/index.html
@@ -311,6 +311,18 @@
 				}
 			}
 		}
+		window.onresize = function(){
+			if(window.innerWidth < 800){
+				if(oldHeight < window.innerHeight){
+						document.querySelector('.heroPoster').style.height = window.innerHeight + 'px';
+						oldHeight = window.innerHeight;
+						console.log('condi2 Done')
+					}else{
+						document.querySelector('.heroPoster').style.height = oldHeight + 'px';
+					}
+			}
+					
+				}
 		function hoverImgPlay(img){
 			'use strict';
 			img.style.transform = 'scale(1.1)';
