--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
 			for(let i = 0; i < iframe.length;i++){
 		    iframe[i].style.position = 'absolute !important';
 			iframe[i].style.top = '-10vh';
-			iframe[i].style.height = '135vh';
-			iframe[i].style.transform = 'scale(1.15)';
+			iframe[i].style.height = '138vh';
+			iframe[i].style.transform = 'scale(1.18)';
 			}
 			if(window.innerWidth < 800){
 				let oldHeight = window.innerHeight;
@@ -311,6 +311,7 @@
 				}
 			}
 		}
+		let oldHeight = window.innerHeight;
 		window.onresize = function(){
 			if(window.innerWidth < 800){
 				if(oldHeight < window.innerHeight){
