--- a/index.html
+++ b/index.html
@@ -291,6 +291,8 @@
 	<script src="scripts/video-js.min.js"></script>
 	<script src="scripts/youtube.min.js"></script>
 	<script type="text/javascript">
+		let heroPoster = document.querySelector('.heroPoster'),
+			    oldHeight = window.innerHeight;
 		window.onload = function(){
 			let iframe = document.querySelectorAll('iframe');
 			if(window.innerWidth < 800){
@@ -302,7 +304,15 @@
 			        Object.assign(iframe[i].style,{position:'abolsute',top:'-10vh',height:'129vh',transform:'scale(1.1)'})
 			    }
 			}
-			if(window.innerWidth < 800){
+			window.onresize = function(){
+				if(oldHeight < window.innerHeight){
+					heroPoster.style.height = window.innerHeight + 'px';
+					oldHeight = window.innerHeight;
+				}else{
+					heroPoster.style.height = oldHeight + 'px';
+				}
+			}
+			/*if(window.innerWidth < 800){
 				let oldHeight = window.innerHeight;
 				window.onresize = function(){
 					if(oldHeight < window.innerHeight){
@@ -312,10 +322,9 @@
 						document.querySelector('.heroPoster').style.height = oldHeight + 'px';
 					}
 				}
-			}
+			}*/
 		}
-		let oldHeight = window.innerHeight;
-		window.onresize = function(){
+		/*window.onresize = function(){
 			if(window.innerWidth < 800){
 				if(oldHeight < window.innerHeight){
 						document.querySelector('.heroPoster').style.height = window.innerHeight + 'px';
@@ -326,7 +335,7 @@
 					}
 			}
 					
-				}
+				}*/
 		function hoverImgPlay(img){
 			'use strict';
 			img.style.transform = 'scale(1.1)';
