--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 			        Object.assign(iframe[i].style,{top:'-7vh',height:'124vh',transform:'scale(1.1)'})
 			    }
 			}
-			window.onresize = function(e){
+			/*window.onresize = function(e){
 				if(resize == true){
 				    if(oldHeight < window.innerHeight){
 					    heroPoster.style.height = window.innerHeight + 'px';
@@ -333,7 +333,7 @@
 			    	e.preventDefault();
 			    	resize = true;
 			    }
-		    }
+		    }*/
 		}
 		function hoverImgPlay(img){
 			'use strict';
