--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 		window.onload = function(){
 			let iframe = document.querySelectorAll('iframe');
 			for(let i = 0; i < iframe.length;i++){
-				Object.assign(iframe[i].style,{position:'absolute',height:'124vh',top:'-15vh',left:'0',width:'100vw'});
+				Object.assign(iframe[i].style,{position:'absolute',height:'140vh',top:'-15vh',left:'0',width:'100vw',transform:'scale(1.2)'});
 			}
 			/*if(window.innerWidth < 800){
 				for(let i = 0; i < iframe.length;i++){
