--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
 	<script type="text/javascript">
 		window.onload = function(){
 			let iframe = document.querySelectorAll('iframe');
-			for(let i = 0; i < iframe.length;i++){
+			/*for(let i = 0; i < iframe.length;i++){
 				Object.assign(iframe[i].style,{position:'absolute',height:'142vh',top:'-15vh',left:'0',width:'100vw',transform:'scale(1.2)'});
-			}
-			/*if(window.innerWidth < 800){
+			}*/
+			if(window.innerWidth < 800){
 				for(let i = 0; i < iframe.length;i++){
 			        Object.assign(iframe[i].style,{position:'abolsute',transform:'scale(1.2)'})
 			      }
@@ -320,7 +320,7 @@
 				for(let i = 0; i < iframe.length;i++){
 			        Object.assign(iframe[i].style,{top:'-7vh',height:'124vh',transform:'scale(1.1)'})
 			    }
-			}*/
+			}
 		}
 		function hoverImgPlay(img){
 			'use strict';
