--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						        </ul>
 					    </div>
 					    <div class="menuItemColumnTwo menuItem">
-						        <p class="greyTitle smallSize">our world</p>
+						        <p class="greyTitle smallSize">information</p>
 						        <ul>
 							        <li><a href="#">Menu Item 123</a></li>
 							        <li><a href="#">Menu Item 123</a></li>
