--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	<link rel="stylesheet" href="styles/video-js.min.css" />
 	<link href="styles/style.css" rel="stylesheet" />
 	<title>Fishing Website</title>
+	<script type="text/javascript">
+		var noOp = function(){}
+		window.console = {
+			log:noOp,
+			dir:noOp
+		}
+		console.log('hello');
+	</script>
 </head>
 <body>
 	<section class="topSection">
