--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="This is a fishing website">
 	<meta name="keywords" content="fishing, sea, gear, ocean, hunting">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="styles/flickity.min.css">
 	<link rel="stylesheet" href="styles/video-js.min.css" />
 	<link href="styles/style.css" rel="stylesheet" />
@@ -15,7 +16,6 @@
 			log:noOp,
 			dir:noOp
 		}
-		console.log('hello');
 	</script>
 </head>
 <body>
