--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		    	<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg softAnimation">
 		    </div>
 		    <video id="heroVideo" class="video-js" controls preload="auto" data-setup="{}">
-                 <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&enablejsapi=1&autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0" type="video/youtube" />
+                 <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" />
             </video>
 		    <div class="textVideo">
 		    	<p class="smallTitle greyTitle">feature film</p>
@@ -119,7 +119,7 @@
 		<div class="video">
 			<div class="poster softAnimation"></div>
 		    <video controls data-setup='{}' id="techVideo" class="video-js">
-			    <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&enablejsapi=1&autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0"/> 
+			    <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0"/> 
 		    </video>
 		    <div class="textVideo">
 		    	<button class="playBtn" onmouseenter="hoverImgPlay(document.querySelector('.videoSec .video .poster'))" onmouseleave="leaveImgPlay(document.querySelector('.videoSec .video .poster'))"><img alt="" src="icons/play-button.png">
