--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 		<div class="video">
 		    <div class="poster heroPoster">
 		    	<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg softAnimation">
+		    	<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}">
+                    <source src="youtube.com/watch?v=1wkPMUZ9vX4?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" />
+                </video>
 		    </div>
 		    <video id="heroVideo" class="video-js" controls preload="auto" data-setup="{}">
                  <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" />
@@ -118,6 +121,9 @@
 		<p class="sectionTitle">Bigger, Stronger, Sharper</p>
 		<div class="video">
 			<div class="poster softAnimation"></div>
+			<video controls data-setup='{}' id="techVideoBg" class="video-js">
+			    <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" /> 
+		    </video>
 		    <video controls data-setup='{}' id="techVideo" class="video-js">
 			    <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0"/> 
 		    </video>
@@ -298,6 +304,7 @@
 	<script type="text/javascript" src="scripts/flickity.pkgd.min.js"></script>
 	<script src="scripts/video-js.min.js"></script>
 	<script src="scripts/youtube.min.js"></script>
+	<script type="text/javascript" src="scripts/playingScript.js"></script>
 	<script type="text/javascript">
 		var iframe,
 		    playBtns = document.querySelectorAll('.playBtn'),
@@ -306,46 +313,30 @@
 		      iframe = document.querySelectorAll('iframe');
 		      function playVideos(video, player,index){ //YOUTUBE
 			'use strict';
+			iframe[index].style.transform = 'scale(1.2)'
 			let parent = video.parentElement.parentElement;
 			parent.querySelector('.vjs-fullscreen-control').click();
-			for(let i = 0; i < iframe.length;i++){
-			        Object.assign(iframe[i].style,{transform:'scale(1.2)'})
-			    }
-			if(rp == 0){
-				Object.assign(iframe[index].style,{opacity:0});
-				Object.assign(parent.querySelector('.vjs-poster').style,{background:'rgba(255,255,255,1)'});
-			}else{
-				Object.assign(parent.querySelector('.vjs-poster').style,{background:'rgba(0,0,0,0)'});
-			}
-			Object.assign(parent.querySelector('.vjs-poster').style,{display:'block',cursor:'default'});
 			parent.style.display = 'block';
 			parent.style.position ='absolute';
+			Object.assign(parent.querySelector('.vjs-poster').style,{background:'rgba(0,0,0,0)',display:'block',cursor:'default'})
 			player.play();
 			player.controls(false);
-			if(rp == 0){
-				player.on('playing',function(){
-				    Object.assign(iframe[index].style,{opacity:1})
-				    Object.assign(parent.querySelector('.vjs-poster').style,{background:'rgba(0,0,0,0)'})
-			    });
-			    rp++;
-			}
 			let r = 0;
 			document.addEventListener('fullscreenchange',function(e){
 				r++;
 				if(r >= 2){
 					player.pause();
 					parent.style.display = 'none';
-					Object.assign(parent.querySelector('.vjs-poster').style,{display:'none',cursor:'pointer'});
 					r = 0;
 				}
 			})
 			player.on('ended',function(){player.play()});
 		  }
 		    playBtns[0].onclick = function(){
-		  	playVideos(document.getElementById('heroVideo_youtube_api'), videojs('heroVideo'),0);
+		  	playVideos(document.getElementById('heroVideo_youtube_api'), videojs('heroVideo'),1);
 		  }
 		    playBtns[1].onclick = function(){
-		  	playVideos(document.getElementById('techVideo_youtube_api'),videojs('techVideo'),1)
+		  	playVideos(document.getElementById('techVideo_youtube_api'),videojs('techVideo'),2)
 		  }
 		}
 		function hoverImgPlay(img){
