--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 	<script src="scripts/video-js.min.js"></script>
 	<script src="scripts/youtube.min.js"></script>
 	<script type="text/javascript" src="background.min.js"></script>
-	<script type="text/javascript" src="script2.js"></script>
+	<script type="text/javascript" src="scripts/playingScript.js"></script>
 	<script type="text/javascript">
 		var iframe,
 		    playBtns = document.querySelectorAll('.playBtn'),
