--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		    <div class="poster heroPoster">
 		    	<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg">   
 		    	<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}">
-                    <source src="youtube.com/watch?v=1wkPMUZ9vX4?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" />
+                    <source src="youtube.com/watch?v=1wkPMUZ9vX4?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=15" type="video/youtube" />
                 </video>
 		    </div>
 		    <video id="heroVideo" class="video-js" controls preload="auto" data-setup="{}">
@@ -113,7 +113,7 @@
 		<div class="video">
 			<div class="poster softAnimation"></div>
 			<video controls data-setup='{}' id="techVideoBg" class="video-js">
-			    <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" /> 
+			    <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=15" type="video/youtube" /> 
 		    </video>
 		    <video controls data-setup='{}' id="techVideo" class="video-js">
 			    <source src="youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" /> 
