--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 			parent.querySelector('.vjs-fullscreen-control').click();
 			parent.style.display = 'block';
 			parent.style.position ='absolute';
-			Object.assign(parent.querySelector('.vjs-poster').style,{background:'rgba(0,0,0,0)',display:'block',cursor:'default'})
+			/*Object.assign(parent.querySelector('.vjs-poster').style,{background:'rgba(0,0,0,0)',display:'block',cursor:'default'})*/
 			player.play();
 			player.controls(false);
 			let r = 0;
